# BINGO_COSMWASM

./: Cargo.toml
src/: contract.rs  lib.rs  msg.rs  state.rs
